--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require": {
         "campaignchain/channel-linkedin": "dev-master"
+    },
+    "autoload": {
+        "psr-4": { "CampaignChain\\Location\\LinkedInBundle\\": "" }
     }
 }
