CE-68 Module installation: Implement versioning

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,14 @@
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Location\\LinkedInBundle\\": "" }
+    },
+    "extra": {
+        "campaignchain": {
+            "kernel": {
+                "classes": [
+                    "CampaignChain\\Location\\LinkedInBundle\\CampaignChainLocationLinkedInBundle"
+                ]
+            }
+        }
     }
 }
