--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,15 @@
         }
     ],
     "require": {
-        "campaignchain/channel-linkedin": "1.0.0-alpha.4"
+        "campaignchain/channel-linkedin": "1.0.0@beta - 1.0.0@rc"
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Location\\LinkedInBundle\\": "" }
     },
     "extra": {
+        "branch-alias": {
+            "dev-1.0.0-beta.1": "1.0.0-dev"
+        },
         "campaignchain": {
             "kernel": {
                 "classes": [
