--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "campaignchain/channel-linkedin": "1.0.0@beta - 1.0.0@rc"
+        "campaignchain/channel-linkedin": "1.0.0@beta | 1.0.0@rc"
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Location\\LinkedInBundle\\": "" }
