--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,21 @@
 {
     "name": "campaignchain/location-linkedin",
     "description": "LinkedIn user stream.",
-    "keywords": ["linkedin","user","stream","campaignchain"],
+    "keywords": ["linkedin","campaignchain"],
     "type": "campaignchain-location",
     "homepage": "http://www.campaignchain.com",
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "Sandro Groganz",
-            "email": "sandro@campaignchain.com"
+            "name": "CampaignChain Inc.",
+            "email": "info@campaignchain.com",
+            "homepage": "http://www.campaignchain.com"
         }
     ],
+    "support": {
+        "issues": "https://github.com/CampaignChain/campaignchain-ce/issues",
+        "docs": "http://doc.campaignchain.com"
+    },
     "require": {
         "campaignchain/channel-linkedin": "dev-master"
     },
