CE-352 Clean up and prepare for 1.0.0-beta2 release

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "campaignchain/location-linkedin",
-    "description": "LinkedIn user stream.",
+    "description": "Holds information about LinkedIn user streams.",
     "keywords": ["linkedin","campaignchain"],
     "type": "campaignchain-location",
     "homepage": "http://www.campaignchain.com",
