--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -20,4 +20,4 @@ parameters:
 services:
     campaignchain_location_linked_in.service:
         class: CampaignChain\Location\LinkedInBundle\Service\LinkedInLocationService
-        arguments: ["@campaignchain.core.channel.wizard", "@campaignchain.core.location", "@campaignchain.channel.linkedin.rest.client", "@templating.helper.assets"]
+        arguments: ["@campaignchain.core.channel.wizard", "@campaignchain.core.location", "@campaignchain.channel.linkedin.rest.client", "@assets.packages"]
