--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "docs": "http://doc.campaignchain.com"
     },
     "require": {
-        "campaignchain/channel-linkedin": "dev-master"
+        "campaignchain/channel-linkedin": "1.0.x-dev"
     },
     "autoload": {
         "psr-4": { "CampaignChain\\Location\\LinkedInBundle\\": "" }
